<resources>
    <string name="app_name">My App Portifolio</string>

    <string name="texto_cabecalho">My Nanodegree Apps!</string>

    <string name="btFilmesPopulares">Filmes Populares</string>
    <string name="btStockHawk">Stock Hawk</string>
    <string name="btFacaoMaior">Faça-o maior</string>
    <string name="btMaterial">Faça seu aplicativo com Material</string>
    <string name="btSejaOnipresente">Seja onipresente</string>
    <string name="btCapstone">Filmes Capstone</string>
</resources>